	  handled in a special way if there are external modules (2014-8-28).
	* include/sys/syscall.h: System definitions should depend on
	  CONFIG_LIB_SYSCALL not CONFIG_NUTTX_KERNEL (2014-8-28).
	* arch/arm/src/armv7-a: Rename syscall.h to svcall.h to work around
	  some include path name collisions; fix some compilation errors in
	  SYSCALL logic when debug is enabled (2014-8-29).
	* arch/arm/include/arm/syscall.h and armv7-a/syscall.h: Fix ARM7/9
	  and Cortex-A SYSCALLs:  For threads in SVC mode, the SVC instructions
	  clobbers R14.  This must be taken account in the inline assembly
	  (2014-8029).
	* arch/arm/src/armv7-a/arm_syscall.c: Fix hard coded values in
	  dispatch_syscall() inline assembly. Back out/corect part of last
	  change; that was going the wrong direction.  With this change, the
	  apps/examples/elf test works with address environments and call
	  gates! (2014-8029).
	* Many, many files:  Renamed CONFIG_NUTTX_KERNEL to CONFIG_BUILD_PROTECTED.
	  Added configuration CONFIG_BUILD_KERNEL that will be used to generate
	  a kernel (only) with full process support and will execut programs
	  only from a file system.  This new configuration is defined but only
	  partially integrated (2014-8-29).
	* tools/refresh.sh: Add a tool to make refreshing configurations easier
	  when you wnat to do a lot of them (2014-8-29).
	* tools/mksyscall.c: Build syscalls that do not need header files (there
	  are none, however) (2014-8-30).
	* include/nuttx/errno.h syscall/syscall.csv and syscall_funclookup.c:
	  Yet more issues with errno access via syscalls fixed (2014-8-30).
	* Makefile.unix, Makefile.win, Directories.mk, FlatLibs.mk, ProtectedLibs.mk,
	  and KernelLibs.mk:  Separate the common directory selection logic
	  into Directories.mk; add support for kernel build.  Move library
	  selection logic in common *.mk files, one each for flat-, protected-,
	  and kernel- mode builds (2014-8-30).
